--- a/ServicesManager.API/appsettings.Development.json
+++ b/ServicesManager.API/appsettings.Development.json
@@ -4,5 +4,31 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=ServicesDb;Username=postgres;Password=shekspir;TrustServerCertificate=True;"
+  },
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Labs\\InnoClinic\\ServicesManager.API\\Logs\\LoggingWithSerilog\\RestApiLog.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
