--- a/ServicesManager.API/appsettings.Development.json
+++ b/ServicesManager.API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    //"PostgreSqlConnection": "Host=localhost;Port=5432;Database=ServicesDb;Username=postgres;Password=12345;TrustServerCertificate=True;",
+    //"PostgreSqlConnection": "Host=localhost;Port=5432;Database=ServicesDb;Username=postgres;Password=12345;TrustServerCertificate=True;"
     "PostgreSqlConnection": "Host=postgres;Port=5432;Database=ServicesDb;Username=postgres;Password=12345;"
   },
 
@@ -31,5 +31,17 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+
+  //"Messaging": {
+  //  "Host": "localhost",
+  //  "UserName": "guest",
+  //  "Password": "guest"
+  //}
+
+  "Messaging": {
+    "Host": "host.docker.internal",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
