--- a/ServiceManager.Services/ServicesManager.Services.csproj
+++ b/ServiceManager.Services/ServicesManager.Services.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="InnoClinic.Domain" Version="1.0.5" />
+    <PackageReference Include="MassTransit" Version="8.0.12" />
   </ItemGroup>
 
   <ItemGroup>
