Update rebbit's configuration

--- a/ServicesManager.API/appsettings.Development.json
+++ b/ServicesManager.API/appsettings.Development.json
@@ -42,6 +42,7 @@
   "Messaging": {
     "Host": "host.docker.internal",
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "MessageBrockerType": "rabbitmq"
   }
 }
