--- a/ServicesManager.API/appsettings.Docker.json
+++ b/ServicesManager.API/appsettings.Docker.json
@@ -1,3 +1,4 @@
+
 {
   "Logging": {
     "LogLevel": {
@@ -7,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "PostgreSqlConnection": "Host=localhost;Port=5432;Database=ServicesDb;Username=postgres;Password=12345;TrustServerCertificate=True;"
+    "PostgreSqlConnection": "Host=postgres;Port=5432;Database=ServicesDb;Username=postgres;Password=12345;"
   },
 
   "Serilog": {
@@ -33,7 +34,7 @@
   },
 
   "Messaging": {
-    "Host": "localhost",
+    "Host": "host.docker.internal",
     "UserName": "guest",
     "Password": "guest"
   }
